--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,123 +4,118 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(0.997 0 0);
-  --foreground: oklch(0.2178 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.2178 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.2178 0 0);
-  --primary: oklch(0.6483 0.1842 257.6269);
-  --primary-foreground: oklch(0.997 0 0);
-  --secondary: oklch(0.9477 0.0265 246.3441);
-  --secondary-foreground: oklch(0.3881 0.1227 262.4599);
-  --muted: oklch(0.9751 0.0127 244.2507);
-  --muted-foreground: oklch(0.6478 0.0544 257.6801);
-  --accent: oklch(0.9477 0.0265 246.3441);
-  --accent-foreground: oklch(0.3881 0.1227 262.4599);
-  --destructive: oklch(0.6368 0.2078 25.3313);
-  --destructive-foreground: oklch(0.997 0 0);
-  --border: oklch(0.933 0.0277 248.1245);
-  --input: oklch(0.9477 0.0265 246.3441);
-  --ring: oklch(0.6483 0.1842 257.6269);
-  --chart-1: oklch(0.6483 0.1842 257.6269);
-  --chart-2: oklch(0.721 0.1413 257.145);
-  --chart-3: oklch(0.7998 0.0986 257.1445);
-  --chart-4: oklch(0.884 0.0542 256.1305);
-  --chart-5: oklch(0.9477 0.0265 246.3441);
-  --sidebar: oklch(1 0 0);
-  --sidebar-foreground: oklch(0.2178 0 0);
-  --sidebar-primary: oklch(0.6483 0.1842 257.6269);
-  --sidebar-primary-foreground: oklch(0.997 0 0);
-  --sidebar-accent: oklch(0.9477 0.0265 246.3441);
-  --sidebar-accent-foreground: oklch(0.3881 0.1227 262.4599);
-  --sidebar-border: oklch(0.933 0.0277 248.1245);
-  --sidebar-ring: oklch(0.6483 0.1842 257.6269);
-  --font-sans: "Inter", sans-serif;
-  --font-serif: "Lora", serif;
-  --font-mono: "Fira Code", monospace;
-  --radius: 0.5rem;
+  --background: oklch(1.0000 0 0);
+  --foreground: oklch(0.1884 0.0128 248.5103);
+  --card: oklch(0.9784 0.0011 197.1387);
+  --card-foreground: oklch(0.1884 0.0128 248.5103);
+  --popover: oklch(1.0000 0 0);
+  --popover-foreground: oklch(0.1884 0.0128 248.5103);
+  --primary: oklch(0.6723 0.1606 244.9955);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.1884 0.0128 248.5103);
+  --secondary-foreground: oklch(1.0000 0 0);
+  --muted: oklch(0.9222 0.0013 286.3737);
+  --muted-foreground: oklch(0.1884 0.0128 248.5103);
+  --accent: oklch(0.9392 0.0166 250.8453);
+  --accent-foreground: oklch(0.6723 0.1606 244.9955);
+  --destructive: oklch(0.6188 0.2376 25.7658);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.9317 0.0118 231.6594);
+  --input: oklch(0.9809 0.0025 228.7836);
+  --ring: oklch(0.6818 0.1584 243.3540);
+  --chart-1: oklch(0.6723 0.1606 244.9955);
+  --chart-2: oklch(0.6907 0.1554 160.3454);
+  --chart-3: oklch(0.8214 0.1600 82.5337);
+  --chart-4: oklch(0.7064 0.1822 151.7125);
+  --chart-5: oklch(0.5919 0.2186 10.5826);
+  --sidebar: oklch(0.9784 0.0011 197.1387);
+  --sidebar-foreground: oklch(0.1884 0.0128 248.5103);
+  --sidebar-primary: oklch(0.6723 0.1606 244.9955);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.9392 0.0166 250.8453);
+  --sidebar-accent-foreground: oklch(0.6723 0.1606 244.9955);
+  --sidebar-border: oklch(0.9271 0.0101 238.5177);
+  --sidebar-ring: oklch(0.6818 0.1584 243.3540);
+  --font-sans: Open Sans, sans-serif;
+  --font-serif: Georgia, serif;
+  --font-mono: Menlo, monospace;
+  --radius: 1.3rem;
   --shadow-x: 0rem;
   --shadow-y: 0.5rem;
-  --shadow-blur: 1.5rem;
-  --shadow-spread: -0.25rem;
-  --shadow-opacity: 0.15;
-  --shadow-color: #3c8cfc;
-  --shadow-2xs: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.07);
-  --shadow-xs: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.07);
-  --shadow-sm: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.15),
-    0rem 1px 2px -1.25px hsl(215 96.9697% 61.1765% / 0.15);
-  --shadow: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.15),
-    0rem 1px 2px -1.25px hsl(215 96.9697% 61.1765% / 0.15);
-  --shadow-md: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.15),
-    0rem 2px 4px -1.25px hsl(215 96.9697% 61.1765% / 0.15);
-  --shadow-lg: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.15),
-    0rem 4px 6px -1.25px hsl(215 96.9697% 61.1765% / 0.15);
-  --shadow-xl: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.15),
-    0rem 8px 10px -1.25px hsl(215 96.9697% 61.1765% / 0.15);
-  --shadow-2xl: 0rem 0.5rem 1.5rem -0.25rem hsl(215 96.9697% 61.1765% / 0.38);
+  --shadow-blur: 0px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0;
+  --shadow-color: rgba(29,161,242,0.15);
+  --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-sm: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-md: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-lg: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
   --tracking-normal: 0em;
   --spacing: 0.25rem;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 2px;
+  --letter-spacing: 0em;
 }
 
 .dark {
-  --background: oklch(0.2178 0 0);
-  --foreground: oklch(0.997 0 0);
-  --card: oklch(0.252 0 0);
-  --card-foreground: oklch(0.997 0 0);
-  --popover: oklch(0.252 0 0);
-  --popover-foreground: oklch(0.997 0 0);
-  --primary: oklch(0.7765 0.1141 251.3028);
-  --primary-foreground: oklch(0.2178 0 0);
-  --secondary: oklch(0.368 0.0529 257.1961);
-  --secondary-foreground: oklch(0.9629 0.0182 250.5883);
-  --muted: oklch(0.4235 0.0567 257.2977);
-  --muted-foreground: oklch(0.7802 0.0501 258.0114);
-  --accent: oklch(0.368 0.0529 257.1961);
-  --accent-foreground: oklch(0.9629 0.0182 250.5883);
-  --destructive: oklch(0.6368 0.2078 25.3313);
-  --destructive-foreground: oklch(0.997 0 0);
-  --border: oklch(0.4972 0.0537 255.5167);
-  --input: oklch(0.368 0.0529 257.1961);
-  --ring: oklch(0.7765 0.1141 251.3028);
-  --chart-1: oklch(0.7765 0.1141 251.3028);
-  --chart-2: oklch(0.8257 0.0875 249.4329);
-  --chart-3: oklch(0.8765 0.0624 247.0817);
-  --chart-4: oklch(0.9276 0.037 240.6781);
-  --chart-5: oklch(0.9629 0.0182 250.5883);
-  --sidebar: oklch(0.252 0 0);
-  --sidebar-foreground: oklch(0.997 0 0);
-  --sidebar-primary: oklch(0.7765 0.1141 251.3028);
-  --sidebar-primary-foreground: oklch(0.2178 0 0);
-  --sidebar-accent: oklch(0.368 0.0529 257.1961);
-  --sidebar-accent-foreground: oklch(0.9629 0.0182 250.5883);
-  --sidebar-border: oklch(0.4972 0.0537 255.5167);
-  --sidebar-ring: oklch(0.7765 0.1141 251.3028);
-  --font-sans: "Inter", sans-serif;
-  --font-serif: "Lora", serif;
-  --font-mono: "Fira Code", monospace;
-  --radius: 0.5rem;
+  --background: oklch(0 0 0);
+  --foreground: oklch(0.9328 0.0025 228.7857);
+  --card: oklch(0.2097 0.0080 274.5332);
+  --card-foreground: oklch(0.8853 0 0);
+  --popover: oklch(0 0 0);
+  --popover-foreground: oklch(0.9328 0.0025 228.7857);
+  --primary: oklch(0.6692 0.1607 245.0110);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.9622 0.0035 219.5331);
+  --secondary-foreground: oklch(0.1884 0.0128 248.5103);
+  --muted: oklch(0.2090 0 0);
+  --muted-foreground: oklch(0.5637 0.0078 247.9662);
+  --accent: oklch(0.1928 0.0331 242.5459);
+  --accent-foreground: oklch(0.6692 0.1607 245.0110);
+  --destructive: oklch(0.6188 0.2376 25.7658);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.2674 0.0047 248.0045);
+  --input: oklch(0.3020 0.0288 244.8244);
+  --ring: oklch(0.6818 0.1584 243.3540);
+  --chart-1: oklch(0.6723 0.1606 244.9955);
+  --chart-2: oklch(0.6907 0.1554 160.3454);
+  --chart-3: oklch(0.8214 0.1600 82.5337);
+  --chart-4: oklch(0.7064 0.1822 151.7125);
+  --chart-5: oklch(0.5919 0.2186 10.5826);
+  --sidebar: oklch(0.2097 0.0080 274.5332);
+  --sidebar-foreground: oklch(0.8853 0 0);
+  --sidebar-primary: oklch(0.6818 0.1584 243.3540);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.1928 0.0331 242.5459);
+  --sidebar-accent-foreground: oklch(0.6692 0.1607 245.0110);
+  --sidebar-border: oklch(0.3795 0.0220 240.5943);
+  --sidebar-ring: oklch(0.6818 0.1584 243.3540);
+  --font-sans: Open Sans, sans-serif;
+  --font-serif: Georgia, serif;
+  --font-mono: Menlo, monospace;
+  --radius: 1.3rem;
   --shadow-x: 0rem;
   --shadow-y: 0.5rem;
-  --shadow-blur: 1.5rem;
-  --shadow-spread: -0.25rem;
-  --shadow-opacity: 0.25;
-  --shadow-color: #7ebbfd;
-  --shadow-2xs: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% /
-        0.13);
-  --shadow-xs: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% / 0.13);
-  --shadow-sm: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% / 0.25),
-    0rem 1px 2px -1.25px hsl(211.1811 96.9466% 74.3137% / 0.25);
-  --shadow: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% / 0.25),
-    0rem 1px 2px -1.25px hsl(211.1811 96.9466% 74.3137% / 0.25);
-  --shadow-md: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% / 0.25),
-    0rem 2px 4px -1.25px hsl(211.1811 96.9466% 74.3137% / 0.25);
-  --shadow-lg: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% / 0.25),
-    0rem 4px 6px -1.25px hsl(211.1811 96.9466% 74.3137% / 0.25);
-  --shadow-xl: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% / 0.25),
-    0rem 8px 10px -1.25px hsl(211.1811 96.9466% 74.3137% / 0.25);
-  --shadow-2xl: 0rem 0.5rem 1.5rem -0.25rem hsl(211.1811 96.9466% 74.3137% /
-        0.63);
+  --shadow-blur: 0px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0;
+  --shadow-color: rgba(29,161,242,0.25);
+  --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-sm: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-md: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-lg: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00), 0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0.00);
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 2px;
+  --letter-spacing: 0em;
+  --spacing: 0.25rem;
 }
 
 @theme inline {
@@ -157,9 +152,9 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
-  --font-serif: var(--font-serif);
+  --font-sans: Open Sans, sans-serif;
+  --font-mono: Menlo, monospace;
+  --font-serif: Georgia, serif;
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -174,6 +169,21 @@
   --shadow-lg: var(--shadow-lg);
   --shadow-xl: var(--shadow-xl);
   --shadow-2xl: var(--shadow-2xl);
+  --radius: 1.3rem;
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
 }
 @layer base {
   * {
@@ -181,5 +191,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    letter-spacing: var(--tracking-normal);
   }
 }
